# CoxPySparkPredictor

./: README.md  cox.txt  pyproject.toml
.github/workflows/: ci.yml
examples/: fit_and_predict.py  tutorial.ipynb
src/spark_lifelines_cox/: __init__.py  artifacts.py  io.py  model.py  sampling.py  schemas.py  udfs.py  utils.py
tests/: conftest.py  test_fit_small.py  test_inference.py  test_pipeline.py  test_sampling.py
