[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "spark-lifelines-cox"
version = "0.1.0"
description = "Spark pipeline utilities for Cox Proportional Hazards models using lifelines"
authors = [{ name = "CODEX" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "pyspark==3.2.1",
  "lifelines>=0.27.0",
  "scipy>=1.10,<1.11",
  "pandas>=1.3,<2.0",
  "numpy>=1.22,<1.25",
  "pyarrow>=4.0,<13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "black>=24.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spark_lifelines_cox"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.black]
line-length = 100
